Fix menu visibility

--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ h6 {
 
 div.top-bar {
   display: inline-block;
-  // position: overlay;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
